--- a/assets/css/elementor.scss
+++ b/assets/css/elementor.scss
@@ -4,26 +4,27 @@
 
 .elementor-field-textual {
     padding: 8px 16px;
-    border-radius: 0px;
+    border-radius: var(--jelly-border-radius-xs);
 }
 
 .elementor-field-group {
     .elementor-field-textual {
-        border: 1px solid #e5e7eb;
+        border-radius: var(--jelly-border-radius-xs);
+        border: 1px solid var(--jelly-color-border);
     }
     .elementor-field-textual:hover {
-        border-color: var(--e-global-color-accent);
+        border-color: var(--jelly-color-primary);
     }
     .elementor-field-textual:focus {
-        border-color: var(--e-global-color-accent);
+        border-color: var(--jelly-color-primary);
         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
         outline: 0;
     }
 }
 
 .elementor-button {
-    background-color: var(--e-global-color-accent);
-    border-radius: 0px;
+    background-color: var(--jelly-color-primary);
+    border-radius: var(--jelly-border-radius-xs);
     cursor: pointer;
     white-space: nowrap;
     font-weight: 600;
@@ -32,7 +33,7 @@
 
 .elementor-widget-search {
     .e-search {
-        --e-search-submit-background-color: var(--e-global-color-accent);
+        --e-search-submit-background-color: var(--jelly-color-primary);
     }
     .e-search .e-search-submit {
         cursor: pointer;
@@ -50,7 +51,7 @@
 }
 
 .elementor-nav-menu a {
-    color: #141414;
+    color: var(--jelly-color-title);
     font-size: 16px;
 }
 
@@ -66,8 +67,8 @@
 .elementor-sub-item.highlighted,
 .elementor-sub-item:focus,
 .elementor-sub-item:hover {
-    background-color: var(--e-global-color-accent);
-    fill: #fff;
+    background-color: var(--jelly-color-primary);
+    fill: var(--jelly-color-white);
 }
 
 .e--pointer-double-line .elementor-item:after,
@@ -76,15 +77,15 @@
 .e--pointer-overline .elementor-item:before,
 .e--pointer-underline .elementor-item:after,
 .e--pointer-underline .elementor-item:before {
-    background-color: var(--e-global-color-accent);
+    background-color: var(--jelly-color-primary);
 }
 
 .elementor-nav-menu--main .elementor-nav-menu ul {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    box-shadow: var(--jelly-box-shadow)
 }
 
 nav.elementor-nav-menu--dropdown {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    box-shadow: var(--jelly-box-shadow)
 }
 
 a.elementor-nav-menu--dropdown.elementor-nav-menu__container .elementor-sub-item {
@@ -104,7 +105,7 @@ div.elementor-menu-toggle {
 }
 
 .elementor-post__title a {
-    color: #141414;
+    color: var(--jelly-color-title);
 }
 
 .elementor-pagination {
@@ -112,12 +113,12 @@ div.elementor-menu-toggle {
 }
 
 .elementor-pagination a.page-numbers {
-    color: #333333;
+    color: var(--jelly-color-text);
 }
 
 .elementor-pagination a.page-numbers:hover {
-    border-color: var(--e-global-color-accent);
-    color: var(--e-global-color-accent);
+    border-color: var(--jelly-color-primary);
+    color: var(--jelly-color-primary);
 }
 
 .elementor-widget-wp-widget-nav_menu ul {
@@ -126,6 +127,38 @@ div.elementor-menu-toggle {
 }
 .elementor-widget-wp-widget-nav_menu h5 {
     margin-top: 0;
+}
+
+.elementor-pagination {
+    margin: 32px 0;
+    text-align: center;
+    .page-numbers,
+    a.page-numbers {
+        border-radius: var(--jelly-border-radius-xs);
+        border: 1px solid var(--jelly-color-border);
+        min-width: 36px;
+        height: 36px;
+        text-align: center;
+        line-height: 36px;
+        display: inline-block;
+        color: var(--jelly-color-description);
+        font-size: 1em;
+        transition: none;
+        padding: 0 12px;
+        box-sizing: border-box;
+        margin: 8px 4px;
+        &:hover {
+            text-decoration: none;
+            background-color: var(--jelly-color-primary);
+            border-color: var(--jelly-color-primary);
+            color: var(--jelly-color-white);
+        }
+    }
+    .page-numbers.current {
+        background: var(--jelly-color-primary);
+        border-color: var(--jelly-color-primary);
+        color: var(--jelly-color-white);
+    }
 }
 
 @media screen and (max-width: 1240px) {
