--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -17,22 +17,22 @@
     flex: 0 0 auto;
     width: 78%;
     box-sizing: border-box;
-    h1{
+    h1 {
         margin-top: 0;
     }
 }
+
 .jelly-container-sidebar {
     flex: 1 0 0%;
 }
 
-.jelly-container-grid{
+.jelly-container-grid {
     box-sizing: border-box;
     width: 100%;
     display: grid;
     gap: 24px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(1, 1fr);
-    // overflow: hidden;
 }
 
 @media screen and (max-width: 1240px) {
@@ -49,7 +49,7 @@
         gap: 16px;
         flex-direction: column !important;
     }
-    .jelly-container-content{
+    .jelly-container-content {
         width: 100%;
     }
     .jelly-container-sidebar {
@@ -101,14 +101,14 @@
     text-align: center;
     .page-numbers,
     a.page-numbers {
-        border-radius: 3px;
+        border-radius: var(--jelly-border-radius-xs);
         border: 1px solid var(--jelly-color-border);
         min-width: 36px;
         height: 36px;
         text-align: center;
         line-height: 36px;
         display: inline-block;
-        color: #555555;
+        color: var(--jelly-color-description);
         font-size: 1em;
         transition: none;
         padding: 0 12px;
@@ -116,22 +116,22 @@
         margin: 8px 4px;
         &:hover {
             text-decoration: none;
-            background-color: #141414;
-            border-color: #141414;
-            color: #fff;
+            background-color: var(--jelly-color-primary);
+            border-color: var(--jelly-color-primary);
+            color: var(--jelly-color-white);
         }
     }
     .page-numbers.current {
-        background: #141414;
-        border-color: #141414;
-        color: #fff;
+        background: var(--jelly-color-primary);
+        border-color: var(--jelly-color-primary);
+        color: var(--jelly-color-white);
     }
 }
 
 .wp-block-image .aligncenter .wp-element-caption {
     text-align: center;
     font-size: 16px;
-    color: #555555;
+    color: var(--jelly-color-description);
 }
 .jelly-404 {
     width: 400px;
@@ -154,7 +154,7 @@
 }
 .jelly-post article {
     p {
-        color: #333333;
+        color: var(--jelly-color-text);
         a {
             text-decoration: underline;
         }
@@ -196,13 +196,13 @@
         line-height: 1;
         background-color: transparent;
         border: 0;
-        color: #555555;
+        color: var(--jelly-color-description);
         padding: 10px 14px 8px 14px;
         height: 40px;
         &:hover {
             border-color: transparent;
             background-color: transparent;
-            color: #141414;
+            color: var(--jelly-color-title);
         }
         position: absolute;
         right: 0;
@@ -211,8 +211,7 @@
     input {
         width: 100%;
         font-size: 14px;
-        // min-width: 240px;
-        border-radius: 6px;
+        border-radius: var(--jelly-border-radius-sm);
         background-color: #fff;
         border-color: var(--jelly-color-border);
         height: 40px;
@@ -250,7 +249,7 @@
         text-align: center;
         line-height: 46px;
         font-size: 20px;
-        color: #333333;
+        color: var(--jelly-color-text);
         left: 11px;
         top: 11px;
         height: 24px;
@@ -293,7 +292,7 @@
 .jelly-author-box {
     background-color: var(--jelly-color-item-bg);
     padding: 20px;
-    border-radius: 8px;
+    border-radius: var(--jelly-border-radius-lg);
     margin: 32px 0;
     gap: 24px;
     display: flex;
@@ -311,11 +310,11 @@
     }
     .author-name {
         font-size: 24px;
-        color: #141414;
+        color: var(--jelly-color-title);
     }
     .author-description {
         font-size: 14px;
-        color: #555555;
+        color: var(--jelly-color-text);
         line-height: 1.5;
     }
 }
@@ -330,6 +329,9 @@
     padding: 24px 0;
     border-top: 1px solid var(--jelly-color-border);
     border-bottom: 1px solid var(--jelly-color-border);
+    a{
+        color:var(--jelly-color-primary)
+    }
     .nav-next {
         text-align: right;
     }
@@ -339,16 +341,17 @@
 * 元信息
 */
 .jelly-single-post-categories {
-    color: #555;
+    color: var(--jelly-color-description);
     a {
         font-size: 16px !important;
+        color: var(--jelly-color-primary);
     }
 }
 
 .jelly-post-meta {
     margin: 20px 0;
     padding-bottom: 16px;
-    color: #555555;
+    color: var(--jelly-color-description);
     font-size: 16px;
     border-bottom: 1px solid var(--jelly-color-border);
     display: flex;
@@ -380,7 +383,7 @@
     margin: 16px 0;
     .share-title {
         font-size: 14px;
-        color: #555555;
+        color: var(--jelly-color-description);
     }
     .share-toggle {
         border-radius: 50%;
@@ -393,7 +396,7 @@
         &:hover {
             border-color: var(--jelly-color-primary);
             background-color: var(--jelly-color-primary);
-            color: #fff;
+            color: var(--jelly-color-white);
         }
         svg {
             padding-top: 5px;
@@ -433,16 +436,14 @@
     .jelly-related-post-thumbnail {
         width: 100%;
         height: 150px;
-        /* 固定高度 */
         object-fit: cover;
         background-size: cover;
         background-position: center;
         display: block;
-        background-color: #fff;
+        background-color: var(--jelly-color-white);
         border-radius: 6px;
         &.placeholder {
-            background-color: #e5e5e5;
-            /* 浅灰色背景 */
+            background-color: var(--jelly-color-description);
         }
     }
 }
@@ -453,18 +454,11 @@
 .jelly-post-card {
     width: 100%;
     box-sizing: border-box;
-    // overflow: hidden;
-
-    // border-radius: 6px;
-    // background-color: var(--jelly-color-item-bg);
-    // box-shadow:
-    //     rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-    //     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     .jelly-card-content {
         padding: 20px 0;
         p {
             font-size: 1em;
-            color: #555555;
+            color: var(--jelly-color-description);
             display: -webkit-box;
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 3;
@@ -497,12 +491,15 @@
         margin-top: 0;
         margin-bottom: 10px;
         a {
-            color: #333;
+            color: var(--jelly-color-title);
+            &:hover{
+                color: var(--jelly-color-primary);
+            }
         }
     }
     .jelly-card-meta {
         font-size: 0.9em;
-        color: #555;
+        color: var(--jelly-color-description);
         margin: 0;
         span {
             display: inline-block;
@@ -525,21 +522,21 @@ nav.jelly-rank-math-breadcrumb {
         padding: 12px var(--jelly-side-width, 16px);
         font-size: 14px;
         line-height: 1.4;
-        color: #1e1e1e;
+        color: var(--jelly-color-text);
         box-sizing: border-box;
     }
     a {
-        color: #0a2240;
+        color: var(--jelly-color-title);
         text-decoration: underline;
         &:hover {
-            color: #003d80;
+            color: var(--jelly-color-title);
         }
     }
     .separator {
         margin: 0 4px;
     }
     .last {
-        color: #555555;
+        color: var(--jelly-color-description);
     }
 }
 
@@ -565,22 +562,22 @@ nav.jelly-rank-math-breadcrumb {
             background-color: var(--jelly-color-border);
         }
         &::-webkit-scrollbar-thumb {
-            background-color: #555555;
+            background-color: var(--jelly-color-description);
         }
         li {
             margin: 0;
             border-bottom: 1px solid var(--jelly-color-border);
-            padding: 12px 6px;
+            padding: 12px;
             &.active {
-                background: #fafafa;
+                background: var(--jelly-color-item-bg);
                 a {
-                    color: #141414;
+                    color: var(--jelly-color-primary);
                     font-weight: 600;
                 }
             }
         }
         a {
-            color: #555555;
+            color: var(--jelly-color-description);
         }
     }
 }
@@ -665,25 +662,30 @@ nav.jelly-rank-math-breadcrumb {
     }
 
     .gt_float_switcher {
+        // transition:none;
         box-shadow: none;
         position: relative !important;
-        border: 1px solid #e5e7eb;
-        border-radius: 99px;
+        border: 1px solid var(--jelly-color-border);
+        border-radius: var(--jelly-border-radius-lg);
         overflow: visible;
         background: transparent;
         padding: 4px 12px;
         min-width: 96px;
         min-height: 34px;
         box-sizing: border-box;
-        color: #333333;
-
+        color: var(--jelly-color-title);
+        &:hover{
+            border-color: var(--jelly-color-border-secondary);
+        }
         .gt_options {
             position: absolute;
             top: 48px;
-            background: #fff;
+            background: var(--jelly-color-white);
             right: 0;
             min-width: 200px;
             box-shadow: var(--jelly-box-shadow);
+            max-height: 362px;
+            border: 1px solid var(--jelly-color-border);
         }
 
         .gt-selected .gt-current-lang {
@@ -702,19 +704,21 @@ nav.jelly-rank-math-breadcrumb {
             overflow: hidden;
         }
 
-        .gt_options a {
-            font-size: 14px;
-
-            &:hover {
-                background-color: var(--jelly-color-primary);
-            }
-
+        .gt_options {
             &::-webkit-scrollbar-track {
-                background-color: #e5e7eb;
+                background-color: var(--jelly-color-item-bg);
             }
 
             &::-webkit-scrollbar-thumb {
-                background-color: #8c8c8c;
+                background-color: var(--jelly-color-description);
+            }
+            a {
+                transition:none;
+                font-size: 14px;
+                &:hover {
+                    color: var(--jelly-color-title);
+                    background-color: var(--jelly-color-item-bg);
+                }
             }
         }
     }
@@ -730,15 +734,15 @@ nav.rank-math-breadcrumb p {
 }
 
 #rank-math-faq {
-    background-color: #f6f6f6;
+    background-color: var(--jelly-color-item-bg);
     padding: 16px;
-    border-radius: 6px;
+    border-radius: var(--jelly-border-radius-sm);
 }
 
 .rank-math-list-item {
-    background-color: #ffffff;
+    background-color: var(--jelly-color-white);
     padding: 16px;
-    border-radius: 6px;
+    border-radius: var(--jelly-border-radius-sm);
     margin-bottom: 12px;
     box-shadow: var(--jelly-box-shadow);
     .rank-math-question {
@@ -754,9 +758,9 @@ nav.rank-math-breadcrumb p {
 
 .wp-block-rank-math-toc-block {
     position: sticky;
-    top: 100px; 
+    top: 100px;
     max-height: calc(100% - 200px);
-    overflow-y: auto; 
+    overflow-y: auto;
     margin: 24px 0;
     h2 {
         font-weight: 600;
@@ -769,14 +773,14 @@ nav.rank-math-breadcrumb p {
         padding-left: 8px;
         max-height: 400px;
         overflow-y: auto;
-        &::-webkit-scrollbar{
+        &::-webkit-scrollbar {
             width: 3px;
         }
-        &::-webkit-scrollbar-track{
-            background-color: var(--jelly-color-border)
+        &::-webkit-scrollbar-track {
+            background-color: var(--jelly-color-border);
         }
-        &::-webkit-scrollbar-thumb{
-            background-color: #555555;
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--jelly-color-description);
         }
         > ul {
             padding-left: 18px;
@@ -790,7 +794,7 @@ nav.rank-math-breadcrumb p {
                     width: 9px;
                     height: 9px;
                     border-radius: 50%;
-                    background: #333333;
+                    background: var(--jelly-color-text);
                     position: absolute;
                     left: -5px;
                     top: 12px;
@@ -808,8 +812,8 @@ nav.rank-math-breadcrumb p {
             position: relative;
             margin: 6px 0;
         }
-        a{
-            color: #555555;
+        a {
+            color: var(--jelly-color-text);
             font-size: 14px;
         }
     }
@@ -821,13 +825,13 @@ nav.rank-math-breadcrumb p {
         background-color: none;
         border-radius: none;
     }
-    .wp-block-rank-math-toc-block{
+    .wp-block-rank-math-toc-block {
         position: relative;
         top: unset;
-        nav{
+        nav {
             max-height: 300px;
         }
-        h2{
+        h2 {
             // text-align: center;
             padding: 8px;
             background: var(--jelly-color-item-bg);
