--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -7,7 +7,7 @@
 }
 .woocommerce .page-description,
 .woocommerce .woocommerce-result-count {
-  color: #555555;
+  color: var(--jelly-color-description);
 }
 .woocommerce .jelly-woocommerce .jelly-container-main:not(.jelly-product-content) {
   flex-direction: row-reverse;
@@ -16,15 +16,20 @@
 .woocommerce .woocommerce-page .woocommerce-result-count {
   float: right;
 }
+.woocommerce ul.products li.product:hover img {
+  transform: scale(1.1);
+}
+.woocommerce ul.products li.product:hover .woocommerce-loop-product__title,
+.woocommerce ul.products li.product:hover h3,
+.woocommerce ul.products li.product:hover .woocommerce-loop-category__title {
+  color: var(--jelly-color-primary);
+}
 .woocommerce ul.products li.product .jelly-product-thumbnail {
   overflow: hidden;
   border: 1px solid var(--jelly-color-border);
 }
 .woocommerce ul.products li.product .jelly-product-thumbnail img {
   transition: all 0.3s ease;
-}
-.woocommerce ul.products li.product .jelly-product-thumbnail img:hover {
-  transform: scale(1.1);
 }
 .woocommerce ul.products li.product .woocommerce-loop-category__title,
 .woocommerce ul.products li.product .woocommerce-loop-product__title,
@@ -56,7 +61,7 @@
 .woocommerce div.product div.images .flex-viewport,
 .woocommerce div.product div.images .woocommerce-product-gallery__trigger + .woocommerce-product-gallery__wrapper {
   border: 1px solid var(--jelly-color-border);
-  border-radius: 12px;
+  border-radius: var(--jelly-border-radius-lg);
   overflow: hidden;
   margin-bottom: 12px;
 }
@@ -72,7 +77,7 @@
 }
 .woocommerce div.product div.images .flex-control-thumbs img {
   border: 1px solid var(--jelly-color-border);
-  border-radius: 12px;
+  border-radius: var(--jelly-border-radius-xs);
 }
 .woocommerce div.product a.button {
   padding: 0.5rem 1rem;
@@ -81,12 +86,12 @@
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0;
-  color: #ffffff;
+  color: var(--jelly-color-white);
   font-weight: 400;
 }
 .woocommerce div.product a.button:hover {
   background-color: var(--jelly-color-primary);
-  color: #fff;
+  color: var(--jelly-color-white);
 }
 .woocommerce div.product .jelly-product-toc {
   clear: both;
@@ -94,6 +99,9 @@
 }
 .woocommerce div.product table.shop_attributes {
   border-top: 0;
+}
+.woocommerce div.product table.shop_attributes tr:nth-child(even) td, .woocommerce div.product table.shop_attributes tr:nth-child(even) th {
+  background: var(--jelly-color-item-bg);
 }
 .woocommerce div.product table.shop_attributes th {
   border: 0;
@@ -119,12 +127,13 @@
 }
 .woocommerce div.product .jelly-product-toc li a {
   font-size: 16px;
-  color: #333;
+  color: var(--jelly-color-text);
 }
 .woocommerce div.product .jelly-product-toc li.active {
-  border-bottom: 2px solid #141414;
+  border-bottom: 2px solid var(--jelly-color-title);
 }
 .woocommerce div.product .jelly-product-toc li.active a {
+  color: var(--jelly-color-title);
   font-weight: 600;
 }
 .woocommerce .woocommerce-Tabs-panel--description table {
