--- a/assets/css/woocommerce.scss
+++ b/assets/css/woocommerce.scss
@@ -8,7 +8,7 @@
     }
     .page-description,
     .woocommerce-result-count {
-        color: #555555;
+        color: var(--jelly-color-description);
     }
     .jelly-woocommerce {
         .jelly-container-main:not(.jelly-product-content) {
@@ -21,13 +21,20 @@
     }
     ul.products {
         li.product {
+            &:hover {
+                img {
+                    transform: scale(1.1);
+                }
+                .woocommerce-loop-product__title,
+                h3,
+                .woocommerce-loop-category__title {
+                    color: var(--jelly-color-primary);
+                }
+            }
             .jelly-product-thumbnail {
                 overflow: hidden;
                 img {
                     transition: all 0.3s ease;
-                    &:hover {
-                        transform: scale(1.1);
-                    }
                 }
                 border: 1px solid var(--jelly-color-border);
             }
@@ -52,10 +59,6 @@
                     margin: 0 0 0;
                 }
             }
-            a.woocommerce-loop-product__link {
-                // height: 100%;
-                // border: 1px solid var(--jelly-color-border);
-            }
         }
     }
     div.product {
@@ -75,7 +78,7 @@
             .flex-viewport,
             .woocommerce-product-gallery__trigger + .woocommerce-product-gallery__wrapper {
                 border: 1px solid var(--jelly-color-border);
-                border-radius: 12px;
+                border-radius: var(--jelly-border-radius-lg);
                 overflow: hidden;
                 margin-bottom: 12px;
             }
@@ -90,7 +93,7 @@
                 }
                 img {
                     border: 1px solid var(--jelly-color-border);
-                    border-radius: 12px;
+                    border-radius: var(--jelly-border-radius-xs);
                 }
             }
         }
@@ -101,11 +104,11 @@
             font-size: 1rem;
             line-height: 1.5;
             border-radius: 0;
-            color: #ffffff;
+            color: var(--jelly-color-white);
             font-weight: 400;
             &:hover {
                 background-color: var(--jelly-color-primary);
-                color: #fff;
+                color: var(--jelly-color-white);
             }
         }
         .jelly-product-toc {
@@ -114,6 +117,12 @@
         }
         table.shop_attributes {
             border-top: 0;
+            tr {
+                &:nth-child(even) td,
+                &:nth-child(even) th {
+                    background: var(--jelly-color-item-bg);
+                }
+            }
             th {
                 border: 0;
                 border-bottom-width: 1px;
@@ -137,13 +146,14 @@
                 margin: 0;
                 a {
                     font-size: 16px;
-                    color: #333;
+                    color: var(--jelly-color-text);
                 }
-                &.active{
-                    a{
+                &.active {
+                    a {
+                        color: var(--jelly-color-title);
                         font-weight: 600;
                     }
-                    border-bottom: 2px solid #141414;
+                    border-bottom: 2px solid var(--jelly-color-title);
                 }
             }
         }
