--- a/assets/dev/widget.css
+++ b/assets/dev/widget.css
@@ -11,7 +11,7 @@
   line-height: 1;
   background-color: transparent;
   border: 0;
-  color: #555555;
+  color: var(--jelly-color-description);
   padding: 10px 14px 8px 14px;
   height: 40px;
   position: absolute;
@@ -21,12 +21,12 @@
 .wp-theme-jelly-frame .jelly-search-form button:hover {
   border-color: transparent;
   background-color: transparent;
-  color: #141414;
+  color: var(--jelly-color-title);
 }
 .wp-theme-jelly-frame .jelly-search-form input {
   width: 100%;
   font-size: 14px;
-  border-radius: 6px;
+  border-radius: var(--jelly-border-radius-sm);
   background-color: #fff;
   border-color: var(--jelly-color-border);
   height: 40px;
@@ -62,7 +62,7 @@
   text-align: center;
   line-height: 46px;
   font-size: 20px;
-  color: #333333;
+  color: var(--jelly-color-text);
   left: 11px;
   top: 11px;
   height: 24px;
@@ -103,7 +103,7 @@
 .jelly-author-box {
   background-color: var(--jelly-color-item-bg);
   padding: 20px;
-  border-radius: 8px;
+  border-radius: var(--jelly-border-radius-lg);
   margin: 32px 0;
   gap: 24px;
   display: flex;
@@ -123,11 +123,11 @@
 }
 .jelly-author-box .author-name {
   font-size: 24px;
-  color: #141414;
+  color: var(--jelly-color-title);
 }
 .jelly-author-box .author-description {
   font-size: 14px;
-  color: #555555;
+  color: var(--jelly-color-text);
   line-height: 1.5;
 }
 
@@ -142,6 +142,9 @@
   border-top: 1px solid var(--jelly-color-border);
   border-bottom: 1px solid var(--jelly-color-border);
 }
+.jelly-post-navigation a {
+  color: var(--jelly-color-primary);
+}
 .jelly-post-navigation .nav-next {
   text-align: right;
 }
@@ -150,16 +153,17 @@
 * 元信息
 */
 .jelly-single-post-categories {
-  color: #555;
+  color: var(--jelly-color-description);
 }
 .jelly-single-post-categories a {
   font-size: 16px !important;
+  color: var(--jelly-color-primary);
 }
 
 .jelly-post-meta {
   margin: 20px 0;
   padding-bottom: 16px;
-  color: #555555;
+  color: var(--jelly-color-description);
   font-size: 16px;
   border-bottom: 1px solid var(--jelly-color-border);
   display: flex;
@@ -189,7 +193,7 @@
 }
 .jelly-share-buttons .share-title {
   font-size: 14px;
-  color: #555555;
+  color: var(--jelly-color-description);
 }
 .jelly-share-buttons .share-toggle {
   border-radius: 50%;
@@ -203,7 +207,7 @@
 .jelly-share-buttons .share-toggle:hover {
   border-color: var(--jelly-color-primary);
   background-color: var(--jelly-color-primary);
-  color: #fff;
+  color: var(--jelly-color-white);
 }
 .jelly-share-buttons .share-toggle svg {
   padding-top: 5px;
@@ -242,18 +246,16 @@
 .jelly-related-posts .jelly-related-post-thumbnail {
   width: 100%;
   height: 150px;
-  /* 固定高度 */
   -o-object-fit: cover;
      object-fit: cover;
   background-size: cover;
   background-position: center;
   display: block;
-  background-color: #fff;
+  background-color: var(--jelly-color-white);
   border-radius: 6px;
 }
 .jelly-related-posts .jelly-related-post-thumbnail.placeholder {
-  background-color: #e5e5e5;
-  /* 浅灰色背景 */
+  background-color: var(--jelly-color-description);
 }
 
 /*
@@ -268,7 +270,7 @@
 }
 .jelly-post-card .jelly-card-content p {
   font-size: 1em;
-  color: #555555;
+  color: var(--jelly-color-description);
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
@@ -301,11 +303,14 @@
   margin-bottom: 10px;
 }
 .jelly-post-card .jelly-card-title a {
-  color: #333;
+  color: var(--jelly-color-title);
+}
+.jelly-post-card .jelly-card-title a:hover {
+  color: var(--jelly-color-primary);
 }
 .jelly-post-card .jelly-card-meta {
   font-size: 0.9em;
-  color: #555;
+  color: var(--jelly-color-description);
   margin: 0;
 }
 .jelly-post-card .jelly-card-meta span {
@@ -328,21 +333,21 @@ nav.jelly-rank-math-breadcrumb p {
   padding: 12px var(--jelly-side-width, 16px);
   font-size: 14px;
   line-height: 1.4;
-  color: #1e1e1e;
+  color: var(--jelly-color-text);
   box-sizing: border-box;
 }
 nav.jelly-rank-math-breadcrumb a {
-  color: #0a2240;
+  color: var(--jelly-color-title);
   text-decoration: underline;
 }
 nav.jelly-rank-math-breadcrumb a:hover {
-  color: #003d80;
+  color: var(--jelly-color-title);
 }
 nav.jelly-rank-math-breadcrumb .separator {
   margin: 0 4px;
 }
 nav.jelly-rank-math-breadcrumb .last {
-  color: #555555;
+  color: var(--jelly-color-description);
 }
 
 /*
@@ -369,22 +374,22 @@ nav.jelly-rank-math-breadcrumb .last {
   background-color: var(--jelly-color-border);
 }
 .jelly-archive-categories .categories-list::-webkit-scrollbar-thumb {
-  background-color: #555555;
+  background-color: var(--jelly-color-description);
 }
 .jelly-archive-categories .categories-list li {
   margin: 0;
   border-bottom: 1px solid var(--jelly-color-border);
-  padding: 12px 6px;
+  padding: 12px;
 }
 .jelly-archive-categories .categories-list li.active {
-  background: #fafafa;
+  background: var(--jelly-color-primary);
 }
 .jelly-archive-categories .categories-list li.active a {
-  color: #141414;
+  color: var(--jelly-color-white);
   font-weight: 600;
 }
 .jelly-archive-categories .categories-list a {
-  color: #555555;
+  color: var(--jelly-color-description);
 }
 
 /*
@@ -396,6 +401,63 @@ nav.jelly-rank-math-breadcrumb .last {
 .jelly-global-form .form-title {
   font-size: 16px;
   margin-bottom: 18px;
+}
+
+.jelly-contact-list .contact-item {
+  display: flex;
+  align-items: center;
+  margin: 12px 0;
+}
+.jelly-contact-list .contact-icon {
+  padding: 12px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: var(--jelly-border-radius-lg);
+  color: inherit;
+  line-height: 1;
+  margin-right: 12px;
+}
+.jelly-contact-list .contact-link {
+  font-style: normal;
+  color: inherit;
+}
+
+.jelly-menu {
+  z-index: 999;
+}
+.jelly-menu ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.jelly-menu .menu-list {
+  display: flex;
+}
+.jelly-menu li {
+  margin: 0;
+}
+.jelly-menu a {
+  display: block;
+  box-sizing: border-box;
+  background-color: #fff;
+  padding: 8px 16px;
+  font-weight: 600;
+  color: var(--jelly-color-title);
+}
+.jelly-menu a:hover {
+  text-decoration: none;
+  color: var(--jelly-color-primary);
+}
+.jelly-menu .menu-toggle {
+  box-sizing: border-box;
+  padding: 6px;
+  border-radius: 0;
+  border: 0;
+  background-color: transparent;
+  color: var(--jelly-color-title);
+  line-height: 1;
+  min-height: unset;
+  display: none;
+  text-align: center;
 }
 
 @media (max-width: 1240px) {
@@ -416,6 +478,32 @@ nav.jelly-rank-math-breadcrumb .last {
   }
   .jelly-archive-categories .categories-list {
     font-size: 16px;
+  }
+  .jelly-menu {
+    width: 100%;
+    background-color: #fff;
+  }
+  .jelly-menu .menu-toggle {
+    display: block;
+  }
+  .jelly-menu .menu-list {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin-left: 20%;
+    background-color: #fff;
+    box-shadow: var(--jelly-box-shadow);
+  }
+  .jelly-menu .menu-list a {
+    width: 100%;
+  }
+  .jelly-menu .menu-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
   }
 }
 @media screen and (max-width: 767px) {
